# slp3-py

./: .gitignore  README.md  main.py  pyproject.toml
notes/chapter2/: bpe-training.md
notes/chater2/: bpe-heapq.md  dotg-as-space.md
src/slp3/chapter2/: bpe.md  bpe.py  bpe_encoder.py  bpe_trainer.py  min_edit.py  printer.py  priority-queue.md  token_v2.py
src/slp3/chapter2/bpe_char/: __init__.py  encoder.py  tainer.py  token_v1.py  word.py
src/slp3/chapter2/gpt/: __init__.py  encoder.py  vocab.py
src/slp3/chapter2/pretokenizer/: __init__.py
src/slp3/chapter3/: ngram.py
tests/: test_bpe.py  test_bpe_char.py  test_gpt.py  test_ngram.py  test_pkgutil.py
