[project]
name = "slp3-py"
version = "0.1.0"
description = "Implementation of Speech and Language Processing 3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "regex>=2026.2.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slp3"]

[dependency-groups]
dev = []
